fix: fix class spacing .wrapper

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 .wrapper {
     max-width: 46rem;
-    padding: 4rem 0 1.5rem 0;
+    padding: 4rem 0.75rem 1.5rem 0.75rem;
     margin: auto;
 
     display: flex;
